# HArDCore2D-release

./: .gitignore  CMakeLists-template.txt  CMakeLists.txt  Doxyfile  INSTALL_NOTES.txt  README.md  docs-MAINPAGE.md  typ2_meshes
.github/workflows/: static.yml
CMake/: FindCOMBBLAS.cmake  FindGMP.cmake  FindLAPACKE.cmake  FindMKL.cmake  FindMPFR.cmake  FindPASTIX.cmake  FindPUGIXML.cmake  FindParMETIS.cmake  FindSCOTCH.cmake  FindSpectra.cmake  FindSuperLU.cmake  FindUmfpack.cmake
ExternalLibraries/: CMakeLists.txt
Schemes/: CMakeLists.txt
Schemes/BPNC/: BPNC_StefanPME.cpp  BPNC_StefanPME.hpp  bpnccore.hpp
Schemes/BoundaryConditions/: BChandlers.hpp  BoundaryConditions.cpp  BoundaryConditions.hpp
Schemes/DDR-klplate/: README.txt  ddr-klplate.cpp  ddr-klplate.hpp
Schemes/DDR-quadrot/: ddr-quadrot.cpp  ddr-quadrot.hpp
Schemes/DDR-rmplate/: README.txt  computeGrad.m  ddr-rmplate.cpp  ddr-rmplate.hpp
Schemes/HHO-diff-advec-reac/: HHO_DiffAdvecReac.cpp  HHO_DiffAdvecReac.hpp
Schemes/HHO-diffusion/: HHO_Diffusion.cpp  HHO_Diffusion.hpp
Schemes/HHO-full-gradient-diff/: README.txt  hho-fullgradientdiff.cpp  hho-fullgradientdiff.hpp
Schemes/HHO-general/: HHO2D.cpp  HHO2D.hpp
Schemes/HHO-locvardiff/: HHO_LocVarDiff.cpp  HHO_LocVarDiff.hpp
Schemes/HMM/: HMM_StefanPME_transient.cpp  HMM_StefanPME_transient.hpp
Schemes/LEPNC/: LEPNC_StefanPME.cpp  LEPNC_StefanPME.hpp  LEPNC_StefanPME_transient.cpp  LEPNC_StefanPME_transient.hpp  LEPNC_diffusion.cpp  LEPNC_diffusion.hpp  README.txt  lepnccore.hpp
Schemes/MeshCoarsen/: DirectedGraph.cpp  DirectedGraph.hpp  MeshCoarsen.cpp
Schemes/TestCase/: BoundaryConditions.cpp  BoundaryConditions.hpp  TestCase.cpp  TestCase.hpp  TestCaseNonLinearity.cpp  TestCaseNonLinearity.hpp  TestCaseStefanPME.cpp  TestCaseStefanPME.hpp  TestCaseTransient.cpp  TestCaseTransient.hpp
data_tests/FVCA9/: README.txt  testA_cart.sh  testA_locally_refined.sh  testB_anisotropy-doubled.sh  testB_hexa-anisotropic.sh  testB_high-anisotropy.sh  testC_hexa-straight_regular.sh  testC_hexa-straight_skewed.sh
docs/: BChandlers_8hpp_source.html  BPNC__StefanPME_8hpp_source.html  BoundaryConditions_8hpp_source.html  DirectedGraph_8hpp_source.html  GMpoly__cell_8hpp_source.html  GMpoly__edge_8hpp_source.html  HHO2D_8hpp_source.html  HHO__DiffAdvecReac_8hpp_source.html  HHO__Diffusion_8hpp_source.html  HHO__LocVarDiff_8hpp_source.html  HMM__StefanPME__transient_8hpp_source.html  LEPNC__StefanPME_8hpp_source.html  LEPNC__StefanPME__transient_8hpp_source.html  LEPNC__diffusion_8hpp_source.html  TestCaseNonLinearity_8hpp_source.html  TestCaseStefanPME_8hpp_source.html  TestCaseTransient_8hpp_source.html  TestCase_8hpp_source.html  annotated.html  basis_8hpp_source.html  bpnccore_8hpp_source.html  cell_8hpp_source.html  classBoundaryConditions-members.html  classBoundaryConditions.html  classDirectedCell-members.html  classDirectedCell.html  classDirectedEdge-members.html  classDirectedEdge.html  classDirectedGraph-members.html  classDirectedGraph.html  classHArDCore2D_1_1BPNCCore-members.html  classHArDCore2D_1_1BPNCCore.html  classHArDCore2D_1_1BPNCCore__coll__graph.md5  classHArDCore2D_1_1BPNCCore__inherit__graph.map  classHArDCore2D_1_1BPNCCore__inherit__graph.md5  classHArDCore2D_1_1BPNC__StefanPME-members.html  classHArDCore2D_1_1BPNC__StefanPME.html  classHArDCore2D_1_1Cell-members.html  classHArDCore2D_1_1Cell.html  classHArDCore2D_1_1CurlBasis-members.html  (+510 more)
docs/latex/: annotated.tex  classBoundaryConditions.tex  classDirectedCell.tex  classDirectedEdge.tex  classDirectedGraph.tex  classHArDCore2D_1_1BPNCCore.tex  classHArDCore2D_1_1BPNCCore__coll__graph.md5  classHArDCore2D_1_1BPNCCore__inherit__graph.md5  classHArDCore2D_1_1BPNC__StefanPME.tex  classHArDCore2D_1_1Cell.tex  classHArDCore2D_1_1CurlBasis.tex  classHArDCore2D_1_1DDRCore.tex  classHArDCore2D_1_1DDRSpace.tex  classHArDCore2D_1_1DDRSpace__coll__graph.md5  classHArDCore2D_1_1DDRSpace__inherit__graph.md5  classHArDCore2D_1_1DOFSpace.tex  classHArDCore2D_1_1DOFSpace__coll__graph.md5  classHArDCore2D_1_1DOFSpace__inherit__graph.md5  classHArDCore2D_1_1DivergenceBasis.tex  classHArDCore2D_1_1EXCurl.tex  classHArDCore2D_1_1EXCurl__coll__graph.md5  classHArDCore2D_1_1EXCurl__inherit__graph.md5  classHArDCore2D_1_1Edge.tex  classHArDCore2D_1_1ElementQuad.tex  classHArDCore2D_1_1Family.tex  classHArDCore2D_1_1GlobalDOFSpace.tex  classHArDCore2D_1_1GlobalDOFSpace__coll__graph.md5  classHArDCore2D_1_1GlobalDOFSpace__inherit__graph.md5  classHArDCore2D_1_1GolyComplBasisCell.tex  classHArDCore2D_1_1GradientBasis.tex  classHArDCore2D_1_1HHO__Diffusion.tex  classHArDCore2D_1_1HHO__LocVarDiff.tex  classHArDCore2D_1_1HMM__StefanPME__Transient.tex  classHArDCore2D_1_1HessianBasis.tex  classHArDCore2D_1_1HolyComplBasisCell.tex  classHArDCore2D_1_1HybridCore.tex  classHArDCore2D_1_1HybridCore__inherit__graph.md5  classHArDCore2D_1_1LEPNCCore.tex  classHArDCore2D_1_1LEPNCCore__inherit__graph.md5  classHArDCore2D_1_1LEPNC__StefanPME.tex  (+118 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+82 more)
runs/: README.txt  directories-template.sh
typ2_meshes/: Lshape_hexa1.typ2  Lshape_hexa2.typ2  Lshape_hexa3.typ2  Lshape_hexa4.typ2  Lshape_tri1.typ2  Lshape_tri1_1.typ2  Lshape_tri1_2.typ2  Lshape_tri1_3.typ2  Lshape_tri1_4.typ2  Lshape_tri2.typ2  Lshape_tri3.typ2  Lshape_tri4.typ2  Lshape_tri5.typ2  cart10x10.typ2  cart20x20.typ2  cart40x40.typ2  cart5x5.typ2  cart64.typ2  cart80x80.typ2  cart_moved_1.typ2  cart_moved_2.typ2  cart_moved_3.typ2  cart_moved_4.typ2  cart_no_supercv_1.typ2  cart_no_supercv_2.typ2  cart_no_supercv_3.typ2  cart_no_supercv_4.typ2  cart_refined_boundary1.typ2  cart_refined_boundary2.typ2  cart_refined_boundary3.typ2  hexa1_1.typ2  hexa1_2.typ2  hexa1_3.typ2  hexa1_4.typ2  kershaw-split-4_1_3.typ2  mesh.typ2  mesh1_2.typ2  mesh1_3.typ2  mesh1_4.typ2  mesh1_5.typ2  (+39 more)
utils/: README.txt  compute_eigs.m  load_matrices.m  mmread.m
(+148 files in other folders)
